Fix zero rgb led

--- a/board/project/CMakeLists.txt
+++ b/board/project/CMakeLists.txt
@@ -40,12 +40,14 @@ add_executable(${PROJECT_NAME}
         castle_link.c
         srxl.c
         pwm_out.c
+        ws2812.c
 )
 
 pico_generate_pio_header(${PROJECT_NAME} ${CMAKE_CURRENT_LIST_DIR}/capture_edge.pio)
 pico_generate_pio_header(${PROJECT_NAME} ${CMAKE_CURRENT_LIST_DIR}/i2c_multi.pio)
 pico_generate_pio_header(${PROJECT_NAME} ${CMAKE_CURRENT_LIST_DIR}/uart_rx.pio)
 pico_generate_pio_header(${PROJECT_NAME} ${CMAKE_CURRENT_LIST_DIR}/castle_link.pio)
+pico_generate_pio_header(${PROJECT_NAME} ${CMAKE_CURRENT_LIST_DIR}/ws2812.pio)
 
 target_link_libraries(${PROJECT_NAME}
         pico_stdlib
